[tool.poetry]
name = "nast"
version = "0.1.0"
description = ""
authors = ["soeren berg <soeren.berg@protonmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
mypy = "^0.930"
yapf = "^0.32.0"
pylint = "^2.12.2"
pytest-mock = "^3.6.1"
pytest-yapf3 = "^0.6.1"
pytest-sugar = "^0.9.4"
pytest-cov = "^3.0.0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
